samples/_failures_safe/1761296625_44e724_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_759a118e.c: In function ‘handle_error_state’:
./samples/SAFE/__tmp_759a118e.c:148:5: error: expected expression at end of input
  148 |     ctx->output_length =
      |     ^~~
./samples/SAFE/__tmp_759a118e.c:148:5: error: expected declaration or statement at end of input
